# Datamind

./: .dockerignore  .env  .env.backup  .env.linux  .env.windows  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  artifact_demo.py  audit_decorator_demo.py  audit_demo.py  check_db.py  config_parser_usage.py  database_demo.py  dd.py  decorate_audit_demo.py  dem_enums.py  demo_config.py  demo_register.py  demo_register_model.py  demo_repo.py  demo_updated.py  docker-compose.yml  drools-guide  entrypoint.sh  env.example  init_db_demo.py  log.py  logging_demo.py  main.py  mask_demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_deprecated.py  (+5 more)
api/: __init__.py  dependencies.py  fraud_detection_api.py  management_api.py  model_api.py  register_api.py  scoring_api.py
bentoml_helper/: delete_model.py  list_model.py
cli/: __init__.py  main.py
config/: README.md  __init__.py  config - 副本.yaml  config.yaml  config_temple.yaml  logging.yaml  logging_config.py  settings.py  storage_config.py
core/: README.md  __init__.py  dynamic_logger.py  log_manager.py  model_repository.py  version_manager.py
datamind/: __init__.py  _build.py  main.py
db/: 01_registry.sql  04_metrics.sql  05_metrics_history.sql  loan_requests.sql  metrics.sql  model_binding.sql  model_registry.sql  model_registry_history.sql  registry.sql  registry_history.sql  requests.sql  rule_registry.sql  types.sql
demo/: service.py  service_stress_test.py  service_usage.ipynb  train.py
docker/: Dockerfile  Dockerfile.bentoml
(+551 files in other folders)
